# lc-3-emu

./: .gitignore  CMakeLists.txt  README.md  compile.sh
buildtree/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  run
include/lc3vm/: constants.hpp  endian_utils.hpp  file_reader.hpp  generic_memory.hpp  lc3vm.hpp  pixbuff.hpp  term_format.hpp  vm.hpp
src/: file_reader.cpp  main.cpp  term_format_linux.cpp  term_format_win.cpp  vm.cpp  vm_op_functions.cpp
